<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup_Activity"
    android:background="@color/colorBackground">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:importantForAutofill="no"
        android:hint="@string/first_name"
        android:layout_marginTop="244dp"
        android:layout_marginRight="45dp"
        android:layout_marginLeft="45dp"
        android:id="@+id/firstname" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:importantForAutofill="no"
        android:hint="@string/last_name"
        android:layout_marginRight="45dp"
        android:layout_marginLeft="45dp"
        android:id="@+id/lastname"
        android:layout_below="@id/firstname"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no"
        android:hint="@string/emali"
        android:layout_marginRight="45dp"
        android:layout_marginLeft="45dp"
        android:id="@+id/email"
        android:layout_below="@id/lastname"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:importantForAutofill="no"
        android:hint="@string/phonenumber"
        android:layout_marginRight="45dp"
        android:layout_marginLeft="45dp"
        android:id="@+id/phone"
        android:layout_below="@id/email"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:importantForAutofill="no"
        android:hint="@string/username"
        android:layout_marginRight="45dp"
        android:layout_marginLeft="45dp"
        android:id="@+id/username1"
        android:layout_below="@id/phone"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:importantForAutofill="no"
        android:hint="@string/password"
        android:layout_marginRight="45dp"
        android:layout_marginLeft="45dp"
        android:id="@+id/new_password"
        android:layout_below="@id/username1"/>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_password"
        android:layout_centerVertical="true"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="65dp"
        android:text="@string/i_agree_to_the_terms_of_service"/>


    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkbox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/signup" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp"
        android:text="@string/already_a_member_login_here" />

</RelativeLayout>